# flight_control_simulation_stack

./: CMakeLists.txt  README.md  notes.md
.devcontainer/: Dockerfile  devcontainer.json
physics_simulator/: CMakeLists.txt
physics_simulator/includes/physics/: physics_engine.hpp  rigid_body.hpp
physics_simulator/includes/physics/rigidbody/: angular_velocity.hpp  linear_velocity.hpp  pose.hpp  rigid_body.hpp  state.hpp
physics_simulator/src/: main.cpp
physics_simulator/src/physics/: physics_engine.cpp  rigid_body.cpp
rocket_simulator/: CMakeLists.txt
rocket_simulator/includes/math/: quaternion.hpp  vec3.hpp
rocket_simulator/includes/physics/: physics_engine.hpp  physics_object.hpp  physics_transform.hpp  rocket.hpp  rocket_transform.hpp  transform.hpp
rocket_simulator/src/: main.cpp
rocket_simulator/src/math/: quaternion.cpp  vec3.cpp
rocket_simulator/src/physics/: physics_engine.cpp  physics_object.cpp  rocket.cpp  rocket_transform.cpp
