cmake_minimum_required(VERSION 3.10)

project(FLIGHT_CONTROL_STACK)

project(ROCKET_SIM LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

add_executable(ROCKET_SIM ${SOURCES})

target_include_directories(ROCKET_SIM PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/includes
)